--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -15,6 +15,6 @@ body {
     justify-content: space-between;
     border: 2px solid white;
     width: 20%;
-    height: 80px;
+    height: auto;
     padding-bottom: 20px;
 }
